fullSandbox11072023/force-app/main/default/objects/Trial__c/Trial__c.object-meta.xml
<CustomObject>
    <label>Trial</label>
    <nameField>
        <displayFormat>Trial-{000000}</displayFormat>
        <label>Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>