fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Count__c</fullName>
    <label>Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>