fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes or No checkbox if the Opportunity Trial needs Evaluation</description>
    <label>Evaluation</label>
    <type>Checkbox</type>
</CustomField>