fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Phases_of_the_Trial__c.field-meta.xml
<CustomField>
    <fullName>Phases_of_the_Trial__c</fullName>
    <label>Phases of the Trial</label>
    <type>TextArea</type>
</CustomField>