fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Primary_Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Primary_Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trials</relationshipLabel>
    <relationshipName>Trials</relationshipName>
    <type>Lookup</type>
</CustomField>