fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <label>Product/SKU</label>
    <length>65</length>
    <type>Text</type>
</CustomField>