fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Samples_Required__c.field-meta.xml
<CustomField>
    <fullName>Samples_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes or No checkbox if the Opportunity Trial needs Samples</description>
    <label>Samples Required</label>
    <type>Checkbox</type>
</CustomField>