fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Secondary_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trials (Secondary Surgeon)</relationshipLabel>
    <relationshipName>Trials3</relationshipName>
    <type>Lookup</type>
</CustomField>