fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Secondary_Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trials (Secondary Surgeon)</relationshipLabel>
    <relationshipName>Trials1</relationshipName>
    <type>Lookup</type>
</CustomField>