fullSandbox11072023/force-app/main/default/objects/Trial__c/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>