fullSandbox11072023/force-app/main/default/objects/Trial__c/recordTypes/Surgical_Trial.recordType-meta.xml
<RecordType>
    <fullName>Surgical_Trial</fullName>
    <active>true</active>
    <label>Surgical Trial</label>
</RecordType>