fullSandbox11072023/force-app/main/default/objects/Trial__c/recordTypes/Vascular_Trial.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Trial</fullName>
    <active>true</active>
    <label>Vascular Trial</label>
</RecordType>